# CoreMS

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Devcontainer_setup_docs.md  Dockerfile  Dockerfile_py310  Dockerfile_py37  Installing CoreMS.md  README.md  SettingsCoreMS.json  devcontainer-changes.patch  docker-compose-jupyter-py310.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/hooks/: protect-worktree.sh
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.extend.yaml  docker-compose.extend.yml
corems/chroma_peak/calc/: ChromaPeakCalc.py
corems/encapsulation/factory/: processingSetting.py
corems/mass_spectra/calc/: lc_calc.py
corems/mass_spectrum/calc/: AutoRecalibration.py  KendrickGroup.py
corems/mass_spectrum/factory/: MassSpectrumClasses.py
corems/mass_spectrum/input/: baseClass.py
corems/mass_spectrum/output/: export.py
corems/molecular_formula/calc/: MolecularFormulaCalc.py
corems/molecular_formula/factory/: MolecularFormulaFactory.py
corems/molecular_id/factory/: classification.py
corems/ms_peak/calc/: MSPeakCalc.py
corems/ms_peak/factory/: MSPeakClasses.py
corems/utils/: setup_molecular_db.py
db/: init.sql
docs/user_guide/: MS_file_imports.md  MassSpecFileImports.md  MolecularFormulaSearch.md  database_initialization.md  git_guide.md  molecular_formula_search.md
notebooks/: Angus_Alcoseal_1060_24.ipynb  Ansulite.ipynb  Ansulite_AC5.ipynb  CoreMS_AFFF_CalGuardian.ipynb  CoreMS_DBdirect.ipynb  CoreMS_SRFA_negESI.ipynb  CoreMS_Tutorial.ipynb  CoreMS_test_AFFFsample.ipynb  CoreMS_test_SRFA_sample.ipynb  Mass_Recalibration_Example.ipynb  Orchidee_Orchidex.ipynb  SRFA.ipynb  Streamlined_Mass_Recalibration_Example.ipynb  Tyco_Towalex.ipynb
notebooks/rby/: 3M_neg.ipynb  APTIM_neg.ipynb  Angus_Alcoseal_106004E.ipynb  Angus_Alcoseal_1060_24.ipynb  Angus_Alcoseal_1061_01_02.ipynb  CA_Guardian_neg.ipynb  CoreMS_AFFF_comparison.ipynb  Peterson_Bucket_neg.ipynb
openspec/changes/fix-jupyter-volume-permissions/: design.md  proposal.md  tasks.md
openspec/changes/fix-upstream-pr-diffs/: tasks.md
openspec/changes/podman-devcontainer-migration/: design.md  proposal.md  tasks.md
openspec/specs/container-build/: spec.md
openspec/specs/container-orchestration/: spec.md
python-app/: Dockerfile
tests/: test_mass_spectrum_export_import.py  test_molecular_formula.py
(+13 files in other folders)
