[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CoreMS"
version = "3.9.3"
description = "Mass Spectrometry Framework for Small Molecules Analysis"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
authors = [
    { name = "Corilo, Yuri", email = "corilo@pnnl.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "chardet>=5.1.0",
    "h5py>=3.10.0",
    "IsoSpecPy>=2.2.2",
    "lmfit>=1.3.0",
    "lxml>=4.9.3",
    "matplotlib>=3.8.0",
    "ms-entropy>=1.2.2",
    "netCDF4>=1.6.5",
    "numpy>=1.26.0,<2.0",
    "openpyxl>=3.1.1",
    "pandas>=2.1.1",
    "psycopg2>=2.9.9",
    "pyswarm>=0.6",
    "pythonnet>=3.0.5",
    "pymzml>=2.5.11",
    "requests>=2.31.0",
    "ripser>=0.6.8",
    "s3path>=0.5.7",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.3",
    "seaborn>=0.13.0",
    "SQLAlchemy>=1.4.51",
    "toml>=0.10.2",
    "tqdm>=4.64.1",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pyprof2calltree",
    "memory-profiler",
    "twine",
    "bumpversion",
    "psutil>=5.6.6",
    "PyWavelets",
    "pdoc>=14.1.0",
]

[project.urls]
Homepage = "https://github.com/EMSL-Computing/CoreMS"
Repository = "https://github.com/EMSL-Computing/CoreMS"

[tool.setuptools.packages.find]
include = ["corems*"]
exclude = ["tests*", "*.win_only*"]

[tool.setuptools.package-data]
"*" = ["ext_lib/*", "ext_lib/dotnet/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov-report=html:doc/coverage_html_report",
    "--cov=corems",
    "-p", "no:warnings",
]

[tool.coverage.run]
omit = [
    "*/win_only/*",
    "*/input/brukerSolarix.py",
    "*/input/thermoMSnFileReader.py",
    "*/transient/MidasDatFile.py",
    "*/encapsulation/constant.py",
    "*/molecular_id/search/molecularMongo.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
